fix:user module

--- a/src/mail/templates/confirm.hbs
+++ b/src/mail/templates/confirm.hbs
@@ -364,146 +364,6 @@
                                     />
                                   </td>
                                 </tr>
-                                <tr>
-                                  <td style='padding: 0; margin: 0'>
-                                    <table
-                                      cellpadding='0'
-                                      cellspacing='0'
-                                      width='100%'
-                                      class='es-menu'
-                                      role='presentation'
-                                      style='
-                                        mso-table-lspace: 0pt;
-                                        mso-table-rspace: 0pt;
-                                        border-collapse: collapse;
-                                        border-spacing: 0px;
-                                      '
-                                    >
-                                      <tr class='links'>
-                                        <td
-                                          align='center'
-                                          valign='top'
-                                          width='25%'
-                                          style='
-                                            margin: 0;
-                                            padding-left: 5px;
-                                            padding-right: 5px;
-                                            padding-top: 15px;
-                                            padding-bottom: 15px;
-                                            border: 0;
-                                          '
-                                        >
-                                          <a
-                                            target='_blank'
-                                            href=''
-                                            style="
-                                              -webkit-text-size-adjust: none;
-                                              -ms-text-size-adjust: none;
-                                              mso-line-height-rule: exactly;
-                                              text-decoration: none;
-                                              display: block;
-                                              font-family: arial,
-                                                'helvetica neue', helvetica,
-                                                sans-serif;
-                                              color: #666666;
-                                              font-size: 14px;
-                                            "
-                                          >Shop</a>
-                                        </td>
-                                        <td
-                                          align='center'
-                                          valign='top'
-                                          width='25%'
-                                          style='
-                                            margin: 0;
-                                            padding-left: 5px;
-                                            padding-right: 5px;
-                                            padding-top: 15px;
-                                            padding-bottom: 15px;
-                                            border: 0;
-                                          '
-                                        >
-                                          <a
-                                            target='_blank'
-                                            href=''
-                                            style="
-                                              -webkit-text-size-adjust: none;
-                                              -ms-text-size-adjust: none;
-                                              mso-line-height-rule: exactly;
-                                              text-decoration: none;
-                                              display: block;
-                                              font-family: arial,
-                                                'helvetica neue', helvetica,
-                                                sans-serif;
-                                              color: #666666;
-                                              font-size: 14px;
-                                            "
-                                          >New</a>
-                                        </td>
-                                        <td
-                                          align='center'
-                                          valign='top'
-                                          width='25%'
-                                          style='
-                                            margin: 0;
-                                            padding-left: 5px;
-                                            padding-right: 5px;
-                                            padding-top: 15px;
-                                            padding-bottom: 15px;
-                                            border: 0;
-                                          '
-                                        >
-                                          <a
-                                            target='_blank'
-                                            href=''
-                                            style="
-                                              -webkit-text-size-adjust: none;
-                                              -ms-text-size-adjust: none;
-                                              mso-line-height-rule: exactly;
-                                              text-decoration: none;
-                                              display: block;
-                                              font-family: arial,
-                                                'helvetica neue', helvetica,
-                                                sans-serif;
-                                              color: #666666;
-                                              font-size: 14px;
-                                            "
-                                          >Sale</a>
-                                        </td>
-                                        <td
-                                          align='center'
-                                          valign='top'
-                                          width='25%'
-                                          style='
-                                            margin: 0;
-                                            padding-left: 5px;
-                                            padding-right: 5px;
-                                            padding-top: 15px;
-                                            padding-bottom: 15px;
-                                            border: 0;
-                                          '
-                                        >
-                                          <a
-                                            target='_blank'
-                                            href=''
-                                            style="
-                                              -webkit-text-size-adjust: none;
-                                              -ms-text-size-adjust: none;
-                                              mso-line-height-rule: exactly;
-                                              text-decoration: none;
-                                              display: block;
-                                              font-family: arial,
-                                                'helvetica neue', helvetica,
-                                                sans-serif;
-                                              color: #666666;
-                                              font-size: 14px;
-                                            "
-                                          >About</a>
-                                        </td>
-                                      </tr>
-                                    </table>
-                                  </td>
-                                </tr>
                               </table>
                             </td>
                           </tr>
@@ -598,7 +458,7 @@
                                   >
                                     <img
                                       src='https://sauzme.stripocdn.email/content/guids/CABINET_67e080d830d87c17802bd9b4fe1c0912/images/55191618237638326.png'
-                                      alt
+                                      alt='Logo'
                                       style='
                                         display: block;
                                         border: 0;
