fix:remove default prop and update image logo

--- a/src/mail/templates/confirm.hbs
+++ b/src/mail/templates/confirm.hbs
@@ -457,7 +457,7 @@
                                     '
                                   >
                                     <img
-                                      src='https://sauzme.stripocdn.email/content/guids/CABINET_67e080d830d87c17802bd9b4fe1c0912/images/55191618237638326.png'
+                                      src='https://trung-storage.s3.ap-southeast-1.amazonaws.com/leadership.png'
                                       alt='Logo'
                                       style='
                                         display: block;
